<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluebird Radio</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start service</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="initialize_failed">Service Failed</string>
    <string name="CONSUMER_KEY">pQrJ6uH5VSyMnRIhujHaXWuYu</string>
    <string name="CONSUMER_SECRET">TSqiGL4JQ6eXfYLtnzkNzPZLmADE8dtqekErnpfVocYvNciO2k</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="add_account">Add account</string>
    <string name="title_delete_account">Delete account?</string>
    <string name="message_delete_account">Do you want to delete this account?</string>
    <string name="logged_in">Logged in successfully</string>
    <string name="not_logged_in">Login failed</string>
    <string name="title_stop_on_unplugged">Stop on headset unplugged</string>
    <string name="summary_stop_on_unplugged">Stop Bluebird Radio when headset unplugged</string>
    <string name="title_manage_account">Manage accounts</string>
    <string name="summary_manage_account">Manage accounts for Bluebird Radio</string>
    <string name="title_speak_screenname">Speak screen name</string>
    <string name="summary_speak_screenname">Speak screen name instead of account name</string>

    <string name="unable_get_oauth_token">Unable to get OAuth token</string>

    <string name="AD_UNIT_ID">a15346189d2aa3e</string>


    <string name="ACTION_CHANGE_PREFERENCE">ACTION_CHANGE_PREFERENCE</string>
    <string name="ACTION_SERVICE_TOGGLE">ACTION_SERVICE_TOGGLE</string>

</resources>
