<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">

    <PreferenceCategory
        android:title="Options">

        <CheckBoxPreference
            android:key="stop_on_unplugged"
            android:title="@string/title_stop_on_unplugged"
            android:summary="@string/summary_stop_on_unplugged"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="speak_screenname"
            android:title="@string/title_speak_screenname"
            android:summary="@string/summary_speak_screenname"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Accounts">
        <Preference
            android:title="@string/title_manage_account"
            android:summary="@string/summary_manage_account">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="kai.twitter.voice"
                android:targetClass="kai.twitter.voice.manageAccount.ManageAccountsActivity" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>